# PolarsFSharp

./: .gitignore  README.md  polars-dotnet-binding.sln
Polars.CSharp/: ArrowExtensions.cs  DataFrame.cs  DataType.cs  Enums.cs  Expr.cs  GroupByBuilder.cs  LazyFrame.cs  LazyGroupByBuilder.cs  Polars.CSharp.csproj  Polars.cs  Series.cs  SqlContext.cs
Polars.CSharp.Tests/: AsyncTests.cs  CleaningTests.cs  DataFrameTests.cs  ExprTests.cs  IOTests.cs  LazyFrameTests.cs  MetaDataTests.cs  Polars.CSharp.Tests.csproj  SeriesTests.cs  SqlTests.cs  TestUtils.cs  UdfTests.cs
Polars.FSharp/: Display.fs  Extensions.fs  Polars.fs  Types.fs  UdfUtils.fs  dates.csv
Polars.FSharp.Tests/: BasicTests.fs  ComplexTests.fs  ExprTests.fs  Polars.FSharp.Tests.fsproj  SafetyTests.fs  SeriesTests.fs  UDFTests.fs
Polars.Native/: Enums.cs  Handles.cs  NativeBindings.cs  Polars.Native.csproj  Wrappers.cs
Polars.Native/Wrappers/: Wrappers.Core.cs  Wrappers.DataFrame.cs  Wrappers.Expr.cs  Wrappers.IO.cs  Wrappers.Lazy.cs  Wrappers.Selectors.cs  Wrappers.Series.cs  Wrappers.UDF.cs
PolarsDebug/: PolarsDebug.csproj  PolarsNative.cs  test.csv
PolarsFSharp/: Display.fs  Polars.fs  PolarsFSharp.fsproj  Program.fs  Types.fs  sales.csv
PolarsFSharp.Tests/: BasicTests.fs  ComplexTests.fs  ExprTests.fs  PolarsFSharp.Tests.fsproj  TestUtils.fs  Tests.fs
native_shim/: Cargo.toml
native_shim/src/: datatypes.rs  eager.rs  error.rs  expr.rs  io.rs  lazy.rs  lib.rs  selectors.rs  series.rs  types.rs  udf.rs  utils.rs
